--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,12 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/layout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:gravity="center"
-    android:orientation="vertical"
-    tools:context=".MainActivity">
+    android:orientation="vertical">
 
     <TextView
         android:id="@+id/tvShow"
@@ -33,4 +31,18 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="test" />
+
+    <androidx.core.widget.NestedScrollView
+        android:id="@+id/nsView"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="我是巴伯奔他是奔波霸我是巴伯奔他是奔波霸我是巴伯奔他是奔波霸我是巴伯奔他是奔波
+            霸我是巴伯奔他是奔波霸我是巴伯奔他是奔波霸我是巴伯奔他是奔波霸"
+            android:textSize="60dp" />
+    </androidx.core.widget.NestedScrollView>
+
 </LinearLayout>
